[package]
name = "euserv_extend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","cookies"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
kuchiki = "0.8.1"
clap = "3.0.0-beta.2"